Added getProduct route to get product by id
